Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -4,7 +4,7 @@
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc; width:75% " |  
  <p align="left">
-Thank you for purchasing this Developer release of Neo FreeRunner. The [[Neo FreeRunner]] phone is the second hardware platform to take advantage of [[Openmoko]]. This guide will help you get to know your Neo FreeRunner and how to start using your Neo FreeRunner.</p>
+Thank you for purchasing this Developer release of Neo FreeRunner. The [[Neo FreeRunner]] phone is the second hardware platform to take advantage of Openmoko. This guide will help you get to know your Neo FreeRunner and how to start using your Neo FreeRunner.</p>
 
 <p align="left">
 Some Frequently Asked Questions for new owners are featured in the [[Getting Started FAQ]].
