Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Manuals%2FNeo_FreeRunner%2Fcs.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fcs.mw
@@ -3,7 +3,7 @@
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #cccccc; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:75% " |  
  <div align="left">
-Děkujeme vám za zakoupení vývojářské verze Neo FreeRunnera. Telefon [[Neo FreeRunner]] je druhou verzí Hardwarové platformy vyvinuté pro využití výhod systému [[Openmoko]]. Tato příručka se vám pokusí usnadait první kroky s vaším Neo FreeRunnerem.
+Děkujeme vám za zakoupení vývojářské verze Neo FreeRunnera. Telefon [[Neo FreeRunner]] je druhou verzí Hardwarové platformy vyvinuté pro využití výhod systému Openmoko. Tato příručka se vám pokusí usnadait první kroky s vaším Neo FreeRunnerem.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
 [[Image:Freerunner box.png|200px|thumb|Balení Neo FreeRunnera]]
 |}
