Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
@@ -4,7 +4,7 @@
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc; width:75% " |  
  <p align="left">
-Gracias por comprar esta versión de desarrollo del Neo FreeRunner. El teléfono [[Neo FreeRunner]] es la segunda plataforma de hardware pensada para [[Openmoko]]. Esta guía te ayudará a conocer tu Neo Freerunner y como empezar a utilizar tu Neo FreeRunner.</p>
+Gracias por comprar esta versión de desarrollo del Neo FreeRunner. El teléfono [[Neo FreeRunner]] es la segunda plataforma de hardware pensada para Openmoko. Esta guía te ayudará a conocer tu Neo Freerunner y como empezar a utilizar tu Neo FreeRunner.</p>
 
 <p align="left">
 Algunas de las Preguntas Mas Frecuentes para nuevos propietarios están contestadas en [[Getting Started FAQ]].
