Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/IPhone.mw
+++ b/IPhone.mw
@@ -59,7 +59,7 @@ Unconfirmed expandable with [http://www.techtree.com/India/News/Samsung_Readies_
  |-
  |Operating system
  |iPhone OS (Proprietary, excepting [http://www.opensource.apple.com/darwinsource/ Darwin]) [http://en.wikipedia.org/wiki/IPhone_OS]
- |[[Openmoko]] Linux (Source code available)
+ |Openmoko Linux (Source code available)
  |-
  |Software
  |Basic PDA + PMP software included. As of March 6 2008, Apple offers an official native SDK ([http://developer.apple.com/iphone/ on Apple's website], with registration), but applications developed with it run only in a sandbox and are limited in API they can use. No background applications, but notification through an Apple server.[http://highscalability.com/apples-iphone-use-centralized-push-based-notification-architecture]
