Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/IPhone%2Fes.mw
+++ b/IPhone%2Fes.mw
@@ -59,7 +59,7 @@ Expandible con [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_C
  |-
  |Sistema operativo
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 su propia versión de OS X])
- |[[Openmoko]] Linux (código fuente disponible)
+ |Openmoko Linux (código fuente disponible)
  |-
  |Software
  |Software básico de PDA + PMP. El software sólo puede ser desarrollado por compañías autorizadas ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Source])
