Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/IPhone%2Ffr.mw
+++ b/IPhone%2Ffr.mw
@@ -57,7 +57,7 @@ Unconfirmed expandable with [http://www.techtree.com/India/News/Samsung_Readies_
  |-
  |Système d'exploitation
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 une optimisée mais compléte version d'OS X])
- |[[Openmoko]] Linux (Code source disponible)
+ |Openmoko Linux (Code source disponible)
  |-
  |Logiciel
  |PDA de base+ Logiciels multimédia inclus. Les logiciels peuvent seulement être créés par des sociétés autorisées ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Source])
