Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/IPhone%2Fit.mw
+++ b/IPhone%2Fit.mw
@@ -57,7 +57,7 @@ Forse sarà espandibile con [http://www.techtree.com/India/News/Samsung_Readies_
  |-
  |Sistema Operativo
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 una ottimizzata ma completa versione di OS X])
- |[[Openmoko]] Linux (Sorgenti disponibili)
+ |Openmoko Linux (Sorgenti disponibili)
  |-
  |Software
  |Basic PDA + PMP software incluso. I software possono essere creti solo dalle compagnie autorizzate ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Fonte])
