Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/IPhone%2Fnl.mw
+++ b/IPhone%2Fnl.mw
@@ -44,7 +44,7 @@ iPhone Gebruikers Interface voorbeeld op youtube http://youtube.com/watch?v=YgW7
  |-
  |OS
  |OS X (Sommige Bronnen zeggen [http://gizmodo.com/gadgets/macworld2007/gizmodo-iphone-hands-on-part-deux-why-isnt-it-white-and-other-questions-227575.php niet volledige OS], anderen zeggen [http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 een geoptimaliseerde maar volledige versie van OS X])
- |[[Openmoko]] Linux (Broncode beschikbaar)
+ |Openmoko Linux (Broncode beschikbaar)
  |-
  |Software
  |Basis PDA + PMP software ingevoegd. Software kan alleen worden gemaakt door Gemachtigde bedrijven ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Bron])
