Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/IPhone_(GTA01).mw
+++ b/IPhone_(GTA01).mw
@@ -52,7 +52,7 @@
  |-
  |Operating system
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 an optimised but full version of OS X])
- |[[Openmoko]] Linux (Source code available)
+ |Openmoko Linux (Source code available)
  |-
  |Software
  |Basic PDA + PMP software included. Software can only be created by authorized companies ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Source])
