Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/InternationalNumbers.mw
+++ b/InternationalNumbers.mw
@@ -2,7 +2,7 @@ I try to make comprehensive documentation on how to transform numbers in interna
 
 '''Request For Comments!'''
 
-In my opinion, [[Openmoko]] really needs to support this.
+In my opinion, Openmoko really needs to support this.
 
 For two reasons. First because using non international numbers on a mobile network is plain stupid and can only be excused by ignorance or lazyness. Numbers just stop to work when you take your phone in another country.
 And second, because we like to match numbers, whatever form they are in.
