Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/License.mw
+++ b/License.mw
@@ -1,5 +1,5 @@
 {{Introbox}}
-The [[Openmoko]] program uses the following Licenses for its official programs:
+The Openmoko program uses the following Licenses for its official programs:
 
 == Native Software ==
 
