Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Main_Page%2Fbg.mw
+++ b/Main_Page%2Fbg.mw
@@ -1,24 +1,24 @@
 {{Languages|Main_Page}}
-<big>'''Добре дошли в публичното [[Openmoko]] Wiki'''</big><br>
+<big>'''Добре дошли в публичното Openmoko Wiki'''</big><br>
 
 [[Image:FIC-neo1973_small.jpg|200px|right|frontside]]
-[[Openmoko]] е проект с [http://en.wikipedia.org/wiki/Open_source отворен код] за създаване на първата в света свободна операционна система за мобилни телефони.
+Openmoko е проект с [http://en.wikipedia.org/wiki/Open_source отворен код] за създаване на първата в света свободна операционна система за мобилни телефони.
 
-Проектът [[Openmoko]] е общност, към която всеки може да се присъедини, помогне и създаде своя идеален телефон.
+Проектът Openmoko е общност, към която всеки може да се присъедини, помогне и създаде своя идеален телефон.
 
-Телефонът [[Neo1973]] от [[FIC]] е първият от многото телефони, на които [[Openmoko]] ще работи.
+Телефонът [[Neo1973]] от [[FIC]] е първият от многото телефони, на които Openmoko ще работи.
 
-Дългосрочната цел на [[Openmoko]] е софтуерът на телефоните да не бъде вече вързан с един телефон. Можете да си купите кой да е съвместим телефон и да инсталирате кой да е софтуер върху целия набор такива. Ако обновите своя телефон не губите софтуера. Коригираните грешки на един телефон са коригирани на всички.
+Дългосрочната цел на Openmoko е софтуерът на телефоните да не бъде вече вързан с един телефон. Можете да си купите кой да е съвместим телефон и да инсталирате кой да е софтуер върху целия набор такива. Ако обновите своя телефон не губите софтуера. Коригираните грешки на един телефон са коригирани на всички.
 
 Присъединете се към нас в [[Openmoko | проекта Openmoko project]] за сътрудничество в някой от [[Development resources | ресурсите на проекта]], включително [[Main Page | Openmoko wiki]]. Информация за това как можете да допринесете за развитието на това wiki можете да намерите в [[Help:Contents | помощната страница за редакция]]. Проекта ръководи [[Meet the Core Team | главният екип разработчици, спонсориран от FIC, Inc.]]
 
 Налична е [[Introduction | встъпителна страница]], която съдържа както [[Introduction#Photos|картинен]], така и [[Introduction#Videos|видео]] материал.  Също така, страницата с обичайните [[FAQ | Често Задавани Въпроси]] може да ви бъде от помощ.  Разработчиците може да намерят [[ChangeLog | списъка с ежедневни промени]] за важен ресурс.
 
-Членовете на [[Openmoko]] общността биха искали да благодарят на [[FIC|FIC Inc.]] за ръководенето и започването на проекта [[Openmoko]].
+Членовете на Openmoko общността биха искали да благодарят на [[FIC|FIC Inc.]] за ръководенето и започването на проекта Openmoko.
 
 
 
-== Области на интерес в [[Openmoko]] ==
+== Области на интерес в Openmoko ==
 
 * [[Basic End-user]] - Информация за крайни потребители искащи базова функционалност и никакви изненади
 * [[Advanced End-user]] - Информация за напреднали крайни потребители, които искат разширена и експериментална функционалност, но които не са програмисти
@@ -26,7 +26,7 @@
 * [[Application Developer]] - Информация за разработчиците на приложения, включително идеи и спецификации за приложения, както и инструменти за изграждането им
 * [[System Developer]] - Информация за системни разработчици, включително програма за начално зареждане, ядро и библиотеки
 * [[Hardware Developer]] - Информация за хардуерни разработчици, включително хардуерни спецификации и инструментариум за откриване на грешки
-* [[Current Events]] - Информация както за [[Community Events#Past Events | минали ]], така и за [[Community Events#Past Events#FIC / Openmoko at Events | бъдещи]] събития, в които FIC или [[Openmoko]] са или ще присъстват.
+* [[Current Events]] - Информация както за [[Community Events#Past Events | минали ]], така и за [[Community Events#Past Events#FIC / Openmoko at Events | бъдещи]] събития, в които FIC или Openmoko са или ще присъстват.
 
 == Документация за разработчици ==
 
@@ -63,7 +63,7 @@
 === Openmoko ===
 * [[OpenEmbedded]] - The distribution-building framework
 * [[Toolchain]] - Използвания от нас за компилиране toolchain
-* [[Openmoko]] - Дистрибуцията Openmoko
+* Openmoko - Дистрибуцията Openmoko
 ** [[Openmoko2007]] - Първото планирано издание (на софтуера)
 ** [[Userspace root image|Основен потребителски образ (на софтуера)]]
 
