Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Main_Page%2Fcs.mw
+++ b/Main_Page%2Fcs.mw
@@ -1,11 +1,11 @@
 {{Languages|Main_Page}}
 
-<big>'''Vítejte na veřejné Wiki projektu [[Openmoko]]'''</big><br>
+<big>'''Vítejte na veřejné Wiki projektu Openmoko'''</big><br>
 
 [[Image:FIC-neo1973_small.jpg|200px|right|frontside]]
-Cílem projektu [[Openmoko]] je vytvoření zcela svobodného operačního systému pro mobilní telefony - prvního na světě.
+Cílem projektu Openmoko je vytvoření zcela svobodného operačního systému pro mobilní telefony - prvního na světě.
 
-Projekt [[Openmoko]] je založen na komunitní spolupráci, takže kdokoliv se může připojit a pomoci při návrhu svého ''vysněného'' telefonu.
+Projekt Openmoko je založen na komunitní spolupráci, takže kdokoliv se může připojit a pomoci při návrhu svého ''vysněného'' telefonu.
 
 Programové vybavení Openmoko můžete nainstalovat na celou škálu [[Supported Hardware|podporovaných mobilních telefonů]]. Ve chvíli kdy si pořídíte nový přístroj, nepřijdete o vaše oblíbené programy. Chyby opravené v jednom telefonu se promítnou jako oprava ve všech telefonech.
 
@@ -15,14 +15,14 @@ Od 9.5.2008 by měla začít sériová výroba druhé verze telefonu Neo Freerun
 
 Telefon [[Neo_FreeRunner/cs|Neo FreeRunner]] je nyní volně v prodeji. Hromadná objednávka byla uzvařena. Ale je možné telefon objednat i individuálně.
 
-[[Neo_FreeRunner/cs|Neo FreeRunner]] od společnosti [[FIC]] je druhý z mnoha očekávaných telefonů, na kterých poběží [[Openmoko]]. 
+[[Neo_FreeRunner/cs|Neo FreeRunner]] od společnosti [[FIC]] je druhý z mnoha očekávaných telefonů, na kterých poběží Openmoko. 
 
-Připojte se prosím ke spolupráci na projektu [[Openmoko]]. K tomu můžete využít seznam [[Development resources | zdrojů projektu]]. Podívejte se také na [[Help:Contents |nápovědu pro editaci wiki]], tak abyste sem mohli přispívat i vy. Projekt je vedený [[Meet the Core Team | týmem vývojářů podporovaných společností FIC, Inc]]. 
+Připojte se prosím ke spolupráci na projektu Openmoko. K tomu můžete využít seznam [[Development resources | zdrojů projektu]]. Podívejte se také na [[Help:Contents |nápovědu pro editaci wiki]], tak abyste sem mohli přispívat i vy. Projekt je vedený [[Meet the Core Team | týmem vývojářů podporovaných společností FIC, Inc]]. 
 
 K dispozici je stránka s [[introduction/cs | představením]] telefonu, včetně [[Introduction#Photos | fotografií]] a [[Introduction#Videos | videí]]. Užitečné mohou být také [[FAQ | často kladené dotazy]]. Pro vývojáře je důležitým zdrojem informací [[ChangeLog | denní seznam změn (change log)]]. 
 
 
-Členové komunity kolem projektu [[Openmoko]] děkují společnosti [[FIC | FIC, Inc.]] za založení a vedení tohoto úžasného projektu.
+Členové komunity kolem projektu Openmoko děkují společnosti [[FIC | FIC, Inc.]] za založení a vedení tohoto úžasného projektu.
 
 <span id="bottom"></span>
 
