--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -3,7 +3,7 @@ __NOTOC__
 __NOEDITSECTION__
 __NOTOC__
 
-<DIV ALIGN=CENTER><big>'''Willkommen im öffentlichen [[Openmoko]]&trade; Wiki'''</big><br></DIV>
+<DIV ALIGN=CENTER><big>'''Willkommen im öffentlichen Openmoko&trade; Wiki'''</big><br></DIV>
 <BR>
 
 '''Diese Seite ist nicht immer aktuell. Am Besten ab und zu mal auf der englischen [[Main Page]] nachschauen''' (und dann möglichst die wichtigen Änderungen hier eintragen).
@@ -26,7 +26,7 @@ __NOTOC__
 
 ==<font color=75d806>Einführung in Openmoko</font>==
 [[Image:GTA02.gif |100px|left|frontside]]
-[[Openmoko]]™ ist ein [http://en.wikipedia.org/wiki/Open_source Open Source] Project, welches unter der [[License| GPL und LGPL]] Lizenz steht. So ist die Idee von Openmoko, den weltweit ersten vollständig offenen Mobiltelefon-Software Stack zu entwickeln.
+Openmoko™ ist ein [http://en.wikipedia.org/wiki/Open_source Open Source] Project, welches unter der [[License| GPL und LGPL]] Lizenz steht. So ist die Idee von Openmoko, den weltweit ersten vollständig offenen Mobiltelefon-Software Stack zu entwickeln.
 
 Das Ziel von Openmoko ist die Entwicklung der weltweit ersten freien mobilen Plattform, die vollständig auf dem X-Server läuft und die meisten X-Anwendungen unterstützt. Sie können somit eine beliebige Software installieren, was einen enormen Vorteil für den Endanwender darstellt, da er nicht mehr ein neues Gerät kaufen muss, wenn er eine zusätzliche Funktionalität benötigt. So können Sie das Telefon nach Ihren Wünschen erweitern.
 
