--- a/Main_Page%2Ffa.mw
+++ b/Main_Page%2Ffa.mw
@@ -3,7 +3,7 @@ __NOEDITSECTION__
 {{Languages|Main Page}}
 <div dir="rtl">
 <br>
-<DIV ALIGN=center><big>'''[[Openmoko]]™ باز. همراه. آزاد.'''</big><br></DIV>
+<DIV ALIGN=center><big>'''Openmoko™ باز. همراه. آزاد.'''</big><br></DIV>
 <BR>
 
 
@@ -14,7 +14,7 @@ __NOEDITSECTION__
 
 
 [[Image:OpenmokoFramework08.png|250px|left| ساختار نرم افزاری Openmoko|thumb]]
-[[Openmoko]]™ (اپن موکو) پروژه ای است که تحت [[License| لایسنسGPL و LGPL ]] به دنیا آمد و به ایجاد یک نرم افزار باز بر روی پلتفرم های موبایل اختصاص پیدا کرد. اولین محصول خود را که Neo 1973 نام داشت در ۹ جولای ۲۰۰۷ عرضه کرد. و سپس پروژه را برای رسیدن به یک هدف ادامه داد : ایجاد یک محصول موبایل با استفاده از شعار Openmoko : باز. همراه. آزاد.
+Openmoko™ (اپن موکو) پروژه ای است که تحت [[License| لایسنسGPL و LGPL ]] به دنیا آمد و به ایجاد یک نرم افزار باز بر روی پلتفرم های موبایل اختصاص پیدا کرد. اولین محصول خود را که Neo 1973 نام داشت در ۹ جولای ۲۰۰۷ عرضه کرد. و سپس پروژه را برای رسیدن به یک هدف ادامه داد : ایجاد یک محصول موبایل با استفاده از شعار Openmoko : باز. همراه. آزاد.
 
 [[NeoSoftwareStack|ساختار Openmoko ]] که شامل پشتیبانی کامل از [[Host-based development with Xoo and Xephyr|X server]] است و به کاربران و توسعه دهندگان اجازه می دهد که پلتفرم سخت افزاری موبایل خود را به یک محصول واحد تبدیل کنند. لایسنس ما به توسعه دهندگان و کاربران این آزادی را می دهد که همه چیزها را تغییر دهند. آزادی برای خصوصی سازی دستگاه خود و یا افزودن به آن. تغییر wallpaper یا از نوع ساختن تمام خانه ! و این باعث می شود که آزادی آن را گرانتی کند. برای مثال برای تبدیل تلفن به یک دستگاه پزشکی یا دستگاه فروش و یا آزادی برای نصب آسان برنامه های مورد علاقه ما. در ورای آزادی نرم‌افزار بر روی دستگاه ما نسخه از CAD دستگاه را منتشر می کنیم. با آزادی نرم‌افزار بر اساس GPL گروها های توسعه دهندههای FOSS را قادر می سازیم تا "آن را زنده نگه دارند" باآزاد سازی فایل های [http://downloads.openmoko.org/CAD/ CAD] ما این فرصت را به طراح های صنعتی و مهندسین نیز می دهیم.
 
