Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Main_Page%2Ffi.mw
+++ b/Main_Page%2Ffi.mw
@@ -2,7 +2,7 @@ __NOTOC__
 __NOEDITSECTION__
 <div style="margin-top: -70px">{{Languages|Main Page}}</div>
 <br>
-<DIV ALIGN=center><big>'''[[Openmoko]]™ - Avoin. Mobiili. Vapaa.'''</big><br></DIV>
+<DIV ALIGN=center><big>'''Openmoko™ - Avoin. Mobiili. Vapaa.'''</big><br></DIV>
 
 
 ==<font color=75d806>Johdanto Openmokoon</font>==
@@ -10,7 +10,7 @@ __NOEDITSECTION__
 
 [[Image:OpenmokoFramework08.png|250px|left|Openmokon ohjelmistopino|thumb]]
 
-[[Openmoko]]™ syntyi [[License| GPL- ja LGPL-lisenssien]] alaisena [http://fi.wikipedia.org/wiki/Vapaa_ohjelmisto vapaan lähdekoodin] projektina, ja on omistautunut avoimen ohjelmistopinon tuomiseen mobiililaitteille. Ensimmäisen tuotteen, Neo 1973:n, toimitukset alkoivat 9. heinäkuuta 2007. Tämän jälkeen projektista tuli oma yrityksensä, jolla tavoitteena on loistavien Openmoko-ohjelmapinoon pohjautuvien mobiilituotteiden luominen: avoimesti, mobiilisti ja vapaasti.
+Openmoko™ syntyi [[License| GPL- ja LGPL-lisenssien]] alaisena [http://fi.wikipedia.org/wiki/Vapaa_ohjelmisto vapaan lähdekoodin] projektina, ja on omistautunut avoimen ohjelmistopinon tuomiseen mobiililaitteille. Ensimmäisen tuotteen, Neo 1973:n, toimitukset alkoivat 9. heinäkuuta 2007. Tämän jälkeen projektista tuli oma yrityksensä, jolla tavoitteena on loistavien Openmoko-ohjelmapinoon pohjautuvien mobiilituotteiden luominen: avoimesti, mobiilisti ja vapaasti.
 
 Täyden [[Host-based development with Xoo and Xephyr|X-palvelimen]] sisältämä [[NeoSoftwareStack|Openmoko-ohjelmapino]] mahdollistaa mobiililaitealustojen muuntamisen ainutlaatuisiksi tuotteiksi käyttäjien ja kehittäjien toimesta. Openmokon lisenssi sallii käyttäjille ja kehittäjille vapaudet "raudasta fiilikseen", vapaudet mukauttaa laitetta joko kosmeettisesti tai radikaalisti pakkaa sekoittaen; vaihda tapettia tai rakenna koko talo uusiksi! Lisenssi sallii myös vapaudet esimerkiki muuntaa puhelin lääketieteen instrumentiksi, lähimarketin hyllylle myytäväksi tai yksinkertaisesti vapauden asentaa kunkin käyttäjän suosikkiohjelmistot. Laitteiden ohjelmistojen vapauttamisen lisäksi projekti on julkaissut laitteiden CAD-suunnittelutiedostot vapaalla Creative Commons ShareAlike -lisenssillä. Tekemällä ohjelmista vapaita GPL-lisenssin myötä, VALO-yhteisön kehittäjät voivat tehdä kaiken uusiksi halutessaan. Vapauttamalla [http://downloads.openmoko.org/CAD/ CAD]-tiedostot teolliset muotoilijat ja insinöörit saavat tämän saman mahdollisuuden.
 
