Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Main_Page%2Fhe.mw
+++ b/Main_Page%2Fhe.mw
@@ -3,7 +3,7 @@ __NOEDITSECTION__
 <div style="margin-top: -70px">{{Languages|Main Page}}</div>
 <br>
 <div style="direction:rtl">
-<DIV ALIGN=center><big>'''[[Openmoko]]™ - פתוח. נייד. חופשי.'''</big><br></DIV>
+<DIV ALIGN=center><big>'''Openmoko™ - פתוח. נייד. חופשי.'''</big><br></DIV>
 
 <div style="font-size:8px; text-align:center">* לתשומת לבכם, רב הקישורים הינם לדפים בשפה האנגלית עמכם הסליחה.
 </div>
@@ -12,8 +12,8 @@ __NOEDITSECTION__
 
 [[Image:OpenmokoFramework08.png|250px|right|מערם התוכנה של Openmoko|thumb]]
 
-הפרוייקט [[Openmoko]]™, נולד כ[http://en.wikipedia.org/wiki/Free_software תוכנה חופשית] תחת רשיון ה-[[License| GPL וה- LGPL]], ומוקדש כולו להעברת מערם תוכנה חופשית לפלטפורמות ניידות.
-[[Openmoko]] השיקה את המוצר הראשון שלה, ה-Neo 1973, בתאריך ה-9 ליולי 2007; ומאז הפכה לחברת סטארט-אפ בעלת מטרה אחת: ליצור מוצרים ניידים מעולים באמצעות המערם של Openmoko: פתוח. נייד. חופשי.
+הפרוייקט Openmoko™, נולד כ[http://en.wikipedia.org/wiki/Free_software תוכנה חופשית] תחת רשיון ה-[[License| GPL וה- LGPL]], ומוקדש כולו להעברת מערם תוכנה חופשית לפלטפורמות ניידות.
+Openmoko השיקה את המוצר הראשון שלה, ה-Neo 1973, בתאריך ה-9 ליולי 2007; ומאז הפכה לחברת סטארט-אפ בעלת מטרה אחת: ליצור מוצרים ניידים מעולים באמצעות המערם של Openmoko: פתוח. נייד. חופשי.
 
 ה[[NeoSoftwareStack|מערם של Openmoko]], הכוללת [[Host-based development with Xoo and Xephyr|שרת X]] מלא, מאפשרת למשתמשים ולמפתחים להפוך פלטפורמות חומרה ניידות למוצרים יחודיים. הרשיון שלנו מעניק למשתמשים ולמפתחים חופש מהמראה המתכתי המשעמם, חופש להתאים את מראה המכשיר מבחינה קוסמטית או לערבב אותו בצורה קיצונית;  לשנות את הטפט או לבנות מחדש את הבית כולו! הוא נותן להם את החופש, לדוגמה, להפוך את הטלפון למכשיר רפואי או התקן לעמדות מכירה או את החופש פשוט להתקין איזו תוכנה שהם חפצים בה. מלבד לשיחרור התוכנה המפעילה את המכשירים שיחררנו גם את קבצי ה-CAD תחת הרשיון לשיתוף יצירות ה-Creative Commons ShareAlike. על ידי שיחרור התוכנה תחת רשיון ה-GPL, אנו מאפשרים לקהילת מפתחי הקוד הפתוח ליצור "משהו חדש." על ידי שיחרור קבצי ה-[http://downloads.openmoko.org/CAD/ CAD] אנו מעניקים למעצבים ולמהנדסים התעשיתיים את אותה ההזדמנות.
 
