Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Main_Page%2Fpl.mw
+++ b/Main_Page%2Fpl.mw
@@ -2,7 +2,7 @@ __NOTOC__
 __NOEDITSECTION__
 {{Languages|Main Page}}
 <br>
-<DIV ALIGN=center><big>'''[[Openmoko]]™ - Otwarte. Mobilne. Wolne.'''</big><br></DIV>
+<DIV ALIGN=center><big>'''Openmoko™ - Otwarte. Mobilne. Wolne.'''</big><br></DIV>
 <BR>
 
 
