--- a/Main_Page%2Fru.mw
+++ b/Main_Page%2Fru.mw
@@ -4,7 +4,7 @@ __NOEDITSECTION__
 {{Languages|Main_Page}}
 
 <BR>
-<DIV ALIGN=center><big>'''[[Openmoko]]™ Открытый. Мобильный. Свободный.'''</big><br></DIV>
+<DIV ALIGN=center><big>'''Openmoko™ Открытый. Мобильный. Свободный.'''</big><br></DIV>
 <BR>
 
 
@@ -14,7 +14,7 @@ __NOEDITSECTION__
 
 [[Image:OpenmokoFramework08.png|250px|left|Программный стек Openmoko|thumb]]
 
-[[Openmoko]]™ - рожден как проект с [http://ru.wikipedia.org/wiki/%D0%9E%D1%82%D0%BA%D1%80%D1%8B%D1%82%D0%BE%D0%B5_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D0%BE%D0%B5_%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D0%B8%D0%B5 Открытым Исходным Кодом] под  [[License| лицензиями GPL и LGPL]], представляющий открытую программную архитектуру для мобильных платформ, поставляемый со своим первым телефоном - Neo 1937 по 9 июля 2007 года, и затем, уже выделен как отдельный проект, в"start-up" компании с одной целью, создать великолепный мобильный продукт использующий архитектуру Openmoko: Открытый. Мобильный. Свободный.
+Openmoko™ - рожден как проект с [http://ru.wikipedia.org/wiki/%D0%9E%D1%82%D0%BA%D1%80%D1%8B%D1%82%D0%BE%D0%B5_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D0%BE%D0%B5_%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D0%B8%D0%B5 Открытым Исходным Кодом] под  [[License| лицензиями GPL и LGPL]], представляющий открытую программную архитектуру для мобильных платформ, поставляемый со своим первым телефоном - Neo 1937 по 9 июля 2007 года, и затем, уже выделен как отдельный проект, в"start-up" компании с одной целью, создать великолепный мобильный продукт использующий архитектуру Openmoko: Открытый. Мобильный. Свободный.
 
 [[NeoSoftwareStack|Архитектура Openmoko]] включает в себя [[Host-based development with Xoo and Xephyr|X сервер]] и позволяет пользователям и разработчикам превратить аппаратную платформу мобильных устройств в уникальные продукты. Наша лицензия дает свободу пользователям и разработчикам от "iron to the eyeballs," свободу в поверхностной настройке устройства или радикальном его изменении;  сменить фоновый рисунок или пересобрать всю систему! Она дает свободу, например, превратить телефон в медицинское устройство, или устройство продаж, или просто свободно устанавливать ваши программы. Для полной свободы программного обеспечения для наших устройств, мы также опубликовали схему устройства в формате CAD под лицензией Creative Commons. Дав свободу программному обеспечению под лицензией GPL, мы позволили сообществу разработчиков FOSS "сделать ее новой". Освободив схемы устройства в файлах [http://downloads.openmoko.org/CAD/ CAD], мы предоставляем промышленным дизайнерам и инженерам эту же возможность.
 
