--- a/Main_Page%2Fse.mw
+++ b/Main_Page%2Fse.mw
@@ -3,13 +3,13 @@ __NOTOC__
 __NOEDITSECTION__
 __NOTOC__
 {| cellspacing="5" cellpadding="0" style="padding: 2%; margin:0em 0em 1em 0em; border:1px solid #F9D163; background:#FCE9B4; width:100%" 
-| <big>'''Välkommen till [[Openmoko]]&trade; offentlig Wiki'''</big><br>
+| <big>'''Välkommen till Openmoko&trade; offentlig Wiki'''</big><br>
 |}
 
 [[Image:FIC-neo1973_small.jpg|200px|right|frontside]]
 Openmoko&trade; är ett [http://en.wikipedia.org/wiki/Open_source Open Source] projekt ämnat att skapa världens första helt fria operativsystem för mobiltelefoner som kör grafisk X-server och därför kan köra nästan alla dagens X-applikationer till bl.a. Linux.
 
-[[Openmoko]] är ett projekt som alla kan delta i för att hjälpa till att skapa sin egen skräddarsydda telefon.
+Openmoko är ett projekt som alla kan delta i för att hjälpa till att skapa sin egen skräddarsydda telefon.
 
 Du kan installera alla typer av Openmoko-mjukvara på alla telefoner i våran lista över [[Supported Hardware|telefoner som stöds]], Och om du uppgraderar din telefon så försvinner inte dina sedan tidigare installerade applikationer. 
 
@@ -111,7 +111,7 @@ För en introduktion till projektet kolla då [[introduction]], Du hittar även 
 |valign="TOP" style="background:#FEE9FF;border-left:5px solid white;border-right:5px solid white;border-bottom:5px solid white;" | 
 * [[OpenEmbedded]] - The distribution-building framework
 * [[Toolchain]] - The toolchain we use for compilation
-* [[Openmoko]] - The Openmoko distribution
+* Openmoko - The Openmoko distribution
 ** [[Openmoko2007]] - The first intended release of it
 ** [[Openmoko2007.2]] - An improved release with more formalized style guidelines.
 ** [[Userspace root image]]
