Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Main_Page%2Fzh_cn.mw
+++ b/Main_Page%2Fzh_cn.mw
@@ -3,7 +3,7 @@ __NOTOC__
 __NOEDITSECTION__
 __NOTOC__
 
-<DIV ALIGN=CENTER><big>欢迎加入[[Openmoko]]&trade; 公共维基'''</big><br></DIV>
+<DIV ALIGN=CENTER><big>欢迎加入Openmoko&trade; 公共维基'''</big><br></DIV>
 <BR>
 
 ==<font color=75d806>简介</font>==
@@ -88,7 +88,7 @@ color="ffffff" >FreeRunner-GTA02</font>
 
 ==<font color=75d806>Openmoko 社区</font>==
 
-[[Openmoko]]是由社区共同开发而成长的。任何使用者都可以加入我们，与我们共同开发手机上的软件，成为社群中的一份子。请透过WIKI或[[Development resources | 任何项目资源]] 加入我们的社群。
+Openmoko是由社区共同开发而成长的。任何使用者都可以加入我们，与我们共同开发手机上的软件，成为社群中的一份子。请透过WIKI或[[Development resources | 任何项目资源]] 加入我们的社群。
 
 如果您是第一次参欢我们的首页，请参考[[introduction|基本介绍]] 页、 取得[[Introduction#Photos|照片]]、  [[Introduction#Videos|影片]]  及 [[Openmoko Wiki Official Index Page|Openmoko官方索引页]]，取得更多关于Openmoko wiki的更多信息。或者，透过[[FAQ | Frequently Asked Questions|常见问题]] 及 [http://lists.openmoko.org/mailman/listinfo/| 邮件列表] 页，取得更多相关的帮助。
 
@@ -139,7 +139,7 @@ color="white" >社群与社群活动</font>
 
 ==<font color=75d806>成为Openmoko开发人员</font>==
 
-Openmoko是专为开发手机装置的平台，您可以自[[Openmoko]] 软件框架取得更多的信息。如果您有志成为Openmoko手机平台的开发人员，下列的技术文件，有助于您取得进一步的开发信息。
+Openmoko是专为开发手机装置的平台，您可以自Openmoko 软件框架取得更多的信息。如果您有志成为Openmoko手机平台的开发人员，下列的技术文件，有助于您取得进一步的开发信息。
 
 {| class="wikitable" cellspacing="4" cellpadding="6" width=100%
 ! width=50% style="background:#ff6600;border-left:5px solid white;border-right:5px solid white;border-top:0px solid white; border:1px solid #ff6600; " | 
@@ -196,7 +196,7 @@ color="white" >软件技术文件</font>
 ** <font color=white>Userspace</font>
 *** [[Gsmd/zh cn|gsmd]] <font color=white> - 管理GSM调制解调器之daemon </font>
 *** [[agpsd]] <font color=white>-AGPS (支援GPS) daemon</font>
-*** [[Openmoko]]  <font color=white>-Openmoko套件</font>
+*** Openmoko  <font color=white>-Openmoko套件</font>
 **** [[Openmoko2007]] - <font color=white>第一支释出之套件</font>
 **** [[Userspace root image]]
 
