--- a/Main_Page%2Fzh_tw.mw
+++ b/Main_Page%2Fzh_tw.mw
@@ -22,7 +22,7 @@ __NOTOC__
 
 [[Image:OpenmokoFramework08.png|250px|left|Openmoko Software Stack|thumb]]
 
-[[Openmoko]]™ 源起於一個[http://en.wikipedia.org/wiki/Open_source 開放源碼] 專案，它是遵守[[License| GPL and LGPL license]] ，並致力 於開發一個開放源碼平台架構下的手機平台為首要目地。
+Openmoko™ 源起於一個[http://en.wikipedia.org/wiki/Open_source 開放源碼] 專案，它是遵守[[License| GPL and LGPL license]] ，並致力 於開發一個開放源碼平台架構下的手機平台為首要目地。
 
 Openmoko的首支手機是Neo 1973，在2007年份首賣，目前最新的產品FreeRunner，已量產出貨，您可以在網路商店中購買此支手機。
 
@@ -37,7 +37,7 @@ Openmoko的首支手機是Neo 1973，在2007年份首賣，目前最新的產品
 [[Neo FreeRunner/zh tw|Neo FreeRunner]] 已於7月4日上市，關於最新的狀態資訊，可參考[[Community_Updates|Community Updates]]。
 
 Openmoko&trade; 是一個 [http://en.wikipedia.org/wiki/Open_source Open Source] 專案，目的是建立全球第一個自由的行動通訊作業系統平臺，此平台在能執行大多數的ｘ應用程式的X server上執行。
-[[Openmoko]]專案源起於社群，所有的人都可以加入，協助設計心目中理想中的客製化手機。
+Openmoko專案源起於社群，所有的人都可以加入，協助設計心目中理想中的客製化手機。
 你可以將 Openmoko軟體安裝在各個[[Openmoko-supported hardware/zh cn|Openmoko支援的硬體]]上，並且原有的軟體並不會隨著更新而遺失。
 
 
@@ -92,7 +92,7 @@ color=white >FreeRunner-GTA02</font>
 </div>
 
 ==<font color=75d806>Openmoko 社群</font>==
-[[Openmoko]]專案是由社群共同開發而成長的。任何使用者都可以加入我們，與我們共同開發手機上的軟體，成為社群中的一份子。請透過WIKI或[[Development resources/zh tw| 任何專案資源]] 加入我們的社群。
+Openmoko專案是由社群共同開發而成長的。任何使用者都可以加入我們，與我們共同開發手機上的軟體，成為社群中的一份子。請透過WIKI或[[Development resources/zh tw| 任何專案資源]] 加入我們的社群。
 
 如果您是第一次參歡我們的首頁，請參考[[introduction|基本介紹]] 頁、 取得[[Introduction#Photos|照片]]、  [[Introduction#Videos|影片]]  及 [[Openmoko Wiki Official Index Page|Openmoko官方索引頁]]，取得更多關於Openmoko wiki的更多資訊。或者，透過[[FAQ | Frequently Asked Questions|常見問題]] 及 [http://lists.openmoko.org/mailman/listinfo/| 郵件列表] 頁，取得更多相關的幫助。
 {| class="wikitable" cellspacing="4" cellpadding="6" width=100%
@@ -138,7 +138,7 @@ color="white" >社群與社群活動</font>
 
 
 ==<font color=75d806>成為Openmoko開發人員</font>==
-Openmoko是專為開發手機裝置的平台，您可以自[[Openmoko]] 軟體框架取得更多的資訊。如果您有志成為Openmoko手機平台的開發人員，下列的技術文件，有助於您取得進一步的開發資訊。
+Openmoko是專為開發手機裝置的平台，您可以自Openmoko 軟體框架取得更多的資訊。如果您有志成為Openmoko手機平台的開發人員，下列的技術文件，有助於您取得進一步的開發資訊。
 
 {| class="wikitable" cellspacing="4" cellpadding="6" width=100%
 ! width=50% style="background:#ff6600;border-left:5px solid white;border-right:5px solid white;border-top:0px solid white; border:1px solid #ff6600; " | 
@@ -197,7 +197,7 @@ color="white" >軟體技術文件</font>
 ** <font color=white>Userspace</font>
 *** [[Gsmd/zh tw|gsmd]] <font color=white> - 管理GSM數據機之daemon </font>
 *** [[agpsd]] <font color=white>-AGPS(支援GPS)daemon</font>
-*** [[Openmoko]]  <font color=white>-Openmoko套件</font>
+*** Openmoko  <font color=white>-Openmoko套件</font>
 **** [[Openmoko2007]] - <font color=white>第一支釋出之套件</font>
 **** [[Userspace root image]]
 
