Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Neo_1973%2Fcs.mw
+++ b/Neo_1973%2Fcs.mw
@@ -1,6 +1,6 @@
 [[Image:FIC-neo1973 small.jpg|120px|right]]
-[[Neo1973 Hardware | Neo1973]] je první telefon vyvinutý pro provoz systému [[Openmoko]].
-Jde o telefon určený pro použití v síti libovolného [[GSM]] operátora a vyráběný firmou [[FIC]], která podnítila vznik projektu [[Openmoko]].
+[[Neo1973 Hardware | Neo1973]] je první telefon vyvinutý pro provoz systému Openmoko.
+Jde o telefon určený pro použití v síti libovolného [[GSM]] operátora a vyráběný firmou [[FIC]], která podnítila vznik projektu Openmoko.
 
 Pokud jste zrovna obdrželi tento telefon a nevíte jak začít, zkuste si prečíst naše [[Getting_Started_with_your_Neo1973 | tipy pro začátek]].
 
