--- a/Neo_1973%2Fnl.mw
+++ b/Neo_1973%2Fnl.mw
@@ -1,5 +1,5 @@
 [[Image:FIC-neo1973 small.jpg|120px|right]]
-De [[Neo1973 Hardware | Neo1973]] is de eerste telefoon die speciaal ontworpen is om [[Openmoko]] te draaien.
+De [[Neo1973 Hardware | Neo1973]] is de eerste telefoon die speciaal ontworpen is om Openmoko te draaien.
 De telefoon, die geproduceerd wordt door [[FIC]], kan gebruikt worden in combinatie met elke [[GSM]] provider. 
 
 Uw Neo1973 net binnen? Kijk op de pagina: [[Getting_Started_with_your_Neo1973/nl | aan de slag]].
@@ -7,7 +7,7 @@ Uw Neo1973 net binnen? Kijk op de pagina: [[Getting_Started_with_your_Neo1973/nl
 
 [[Neo1973 Hardware | Neo1973 Hardware]] en [[Disassembling Neo1973]] bevatten informatie over de hardware.
 
-Zie [[Openmoko]], [[OpenmokoFramework]], [[MokoMakefile]] en [[Development resources]] voor meer informatie over de (vrije) broncode.
+Zie Openmoko, [[OpenmokoFramework]], [[MokoMakefile]] en [[Development resources]] voor meer informatie over de (vrije) broncode.
 
 Zie [[FAQ]] voor overige veel gestelde vragen (Frequently Asked Questions).
 
