--- a/Neo_1973%2Fro.mw
+++ b/Neo_1973%2Fro.mw
@@ -1,16 +1,16 @@
-Modelul Neo1973 este primul telefon proiectat să ruleze [[Openmoko]]. Este un telefon care functioneaza cu orice retea GSM, şi este produs de [[FIC]] (First International Computer), iniţiatorii proiectului [[Openmoko]].
+Modelul Neo1973 este primul telefon proiectat să ruleze Openmoko. Este un telefon care functioneaza cu orice retea GSM, şi este produs de [[FIC]] (First International Computer), iniţiatorii proiectului Openmoko.
 
 Daca tocmai ai primit telefonul tau Neo1973 aici [[Getting_Started_with_your_Neo1973 | getting started]] sunt cateva sugestii referitoare la cum să începi să-l foloseşti.
 
 [[Image:FIC-neo1973 small.jpg|120px|right]]
-The [[Neo1973 Hardware | Neo1973]] is the first phone designed to run [[Openmoko]].
-It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[Openmoko]] project.
+The [[Neo1973 Hardware | Neo1973]] is the first phone designed to run Openmoko.
+It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the Openmoko project.
 
 If you just received a Neo1973 here are some suggestions for [[Getting_Started_with_your_Neo1973 | getting started]].
 
 [[Neo1973 Hardware | Neo1973 Hardware]] and [[Disassembling Neo1973]] have more information on the hardware.
 
-See [[Openmoko]], [[OpenmokoFramework]], [[MokoMakefile]] and [[Development resources]] for more information about source code.
+See Openmoko, [[OpenmokoFramework]], [[MokoMakefile]] and [[Development resources]] for more information about source code.
 
 See [[FAQ]] for other Frequently Asked Questions.
 
