Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Neo_1973%2Fru.mw
+++ b/Neo_1973%2Fru.mw
@@ -1,10 +1,10 @@
 [[Image:FIC-neo1973 small.jpg|120px|right]]
-[[:Category:Neo1973 Hardware | Neo1973]] это первый телефон разработанный для среды [[Openmoko]].
-Телефон, совместимый с [[GSM | сетью GSM]], производится компанией [[FIC]], которая инициировала проект [[Openmoko]].
+[[:Category:Neo1973 Hardware | Neo1973]] это первый телефон разработанный для среды Openmoko.
+Телефон, совместимый с [[GSM | сетью GSM]], производится компанией [[FIC]], которая инициировала проект Openmoko.
 
 Разделы [[:Category:Neo1973 Hardware | Neo1973 Hardware]] и [[Disassembling Neo1973 | Разборка Neo1973]] подробнее информируют об аппаратной составляющей.
 
-Разделы [[Openmoko]], [[OpenmokoFramework]], [[MokoMakefile]] и [[Development resources]] подробнее информируют об исходных текстах программного обеспечения.
+Разделы Openmoko, [[OpenmokoFramework]], [[MokoMakefile]] и [[Development resources]] подробнее информируют об исходных текстах программного обеспечения.
 
 Смотрите раздел [[FAQ]] с прочими часто возникающими вопросами.
 
