Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Neo_FreeRunner%2Fcs.mw
+++ b/Neo_FreeRunner%2Fcs.mw
@@ -1,7 +1,7 @@
 {{Languages|Neo FreeRunner}}
 {{Gta02menu}}
 
-'''Neo FreeRunner''' (vnitří označení GTA02) je druhým telefonem na kterém běží [[Openmoko]] software. Je to přímý potom mladšího [[FIC]] [[Neo1973]]. Spacifikace hardware [[Neo FreeRunner GTA02 Hardware]].
+'''Neo FreeRunner''' (vnitří označení GTA02) je druhým telefonem na kterém běží Openmoko software. Je to přímý potom mladšího [[FIC]] [[Neo1973]]. Spacifikace hardware [[Neo FreeRunner GTA02 Hardware]].
 
 == FreeRunner je vydán ==
 
