Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Neo_FreeRunner%2Fes.mw
+++ b/Neo_FreeRunner%2Fes.mw
@@ -1,6 +1,6 @@
 {{Languages|Neo FreeRunner}}
 {{Gta02menu/es}}
-El '''Neo FreeRunner''' (codigo interno: GTA02) es el segundo telefono diseñado para el software [[Openmoko]] y es un descendiente directo del [[FIC/es|FIC]] [[Neo1973/es|Neo1973]]. Las especificaciones de Hardware se encuentran en  [[Neo FreeRunner GTA02 Hardware]].
+El '''Neo FreeRunner''' (codigo interno: GTA02) es el segundo telefono diseñado para el software Openmoko y es un descendiente directo del [[FIC/es|FIC]] [[Neo1973/es|Neo1973]]. Las especificaciones de Hardware se encuentran en  [[Neo FreeRunner GTA02 Hardware]].
 
 == FreeRunner ya a la venta! ==
 [[Image:Freerunner02.gif|200px|right]]
