Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Neo_FreeRunner%2Ffa.mw
+++ b/Neo_FreeRunner%2Ffa.mw
@@ -2,7 +2,7 @@
 <div dir="rtl">
 {{Gta02menu}}
 
-'''Neo FreeRunner''' (با نام کد GTA02( دومین تلفن ای است که برای اجرا شدن [[Openmoko]] طراحی شده و به  طور مستقیم نسل جدید از [[Neo1973]] شرکت [[FIC]] می باشد. توضیحات سخت افزاری را می توانید در [[Neo FreeRunner GTA02 Hardware| این صفحه ]] مشاهده کنید.
+'''Neo FreeRunner''' (با نام کد GTA02( دومین تلفن ای است که برای اجرا شدن Openmoko طراحی شده و به  طور مستقیم نسل جدید از [[Neo1973]] شرکت [[FIC]] می باشد. توضیحات سخت افزاری را می توانید در [[Neo FreeRunner GTA02 Hardware| این صفحه ]] مشاهده کنید.
  
 == FreeRunner منتشر شد  ==
 
