Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/OpenEmbedded.mw
+++ b/OpenEmbedded.mw
@@ -1,7 +1,7 @@
 {{Languages|OpenEmbedded}}
 
 
-[[Openmoko]], our distribution, is built using OpenEmbedded.  OpenEmbedded will:
+Openmoko, our distribution, is built using OpenEmbedded.  OpenEmbedded will:
 
 * Generate (cross-compile) software packages for multiple embedded targets.
 * Handle different hardware architectures, and support multiple releases across those architectures. 
