Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/OpenEmbedded%2Fzh_tw.mw
+++ b/OpenEmbedded%2Fzh_tw.mw
@@ -1,6 +1,6 @@
 {{Languages|OpenEmbedded}}
 
-[[Openmoko]]，我們的套件，是使用OpenEmbedded架構而成的。OpenEmbedded可以：
+Openmoko，我們的套件，是使用OpenEmbedded架構而成的。OpenEmbedded可以：
 
 * 針對多個嵌入式裝置產生 (cross-compile) 軟體套件。
 * 管理不同的硬體架構，及支援跨越架構的多版本軟體。 
