--- a/Openmoko_supported_devices%2Fzh_cn.mw
+++ b/Openmoko_supported_devices%2Fzh_cn.mw
@@ -1,5 +1,5 @@
 {{Languages|Openmoko-supported hardware}}
-[[Openmoko]] 可以在不同的硬件平台上执行。下列的硬件平台是最常见被支持的平台。
+Openmoko 可以在不同的硬件平台上执行。下列的硬件平台是最常见被支持的平台。
 
 * [[Neo1973]] 支持性最佳，最值得参考的硬件平台。
 * Treo 650 [http://blog.mikeasoft.com/2007/07/01/openmoko-on-a-treo-650/ ]
