--- a/Openmoko_under_QEMU.mw
+++ b/Openmoko_under_QEMU.mw
@@ -1,6 +1,6 @@
-[http://en.wikipedia.org/wiki/Qemu QEMU] can be used in at least three ways to run [[Openmoko]]. Depending on the purpose that you are going to use the emulator for, you should decide on the target platform.
+[http://en.wikipedia.org/wiki/Qemu QEMU] can be used in at least three ways to run Openmoko. Depending on the purpose that you are going to use the emulator for, you should decide on the target platform.
 
-*''PC'' - Openmoko can be built to run on regular i386 hardware, 32- or 64-bit and this is probably the fastest way to get Openmoko running if you want to get an impression of how it looks.  In this scenario QEMU would only serve for isolating your [[Openmoko]] installation from your normal system, or, if you're not on a UNIX system, QEMU provides a non-intrusive way to get Linux up quickly. More information can be found in the [[FAQ]] and [[Getting Openmoko working on host with Xoo|here]].
+*''PC'' - Openmoko can be built to run on regular i386 hardware, 32- or 64-bit and this is probably the fastest way to get Openmoko running if you want to get an impression of how it looks.  In this scenario QEMU would only serve for isolating your Openmoko installation from your normal system, or, if you're not on a UNIX system, QEMU provides a non-intrusive way to get Linux up quickly. More information can be found in the [[FAQ]] and [[Getting Openmoko working on host with Xoo|here]].
 
 *''Integrator/CP'' - this is the default ARM-based machine that QEMU knows about. This target is used with MACHINE="qemuarm" and it is sufficient to run the original Openmoko rootfs image, although it doesn't emulate any of the [[:Category:Neo1973 Hardware | Neo1973 Hardware]] except the very CPU core. Read more in the [[FAQ#Q:_Is_there_an_emulator_available_for_Openmoko.3F|FAQ]].
 
