Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Openmoko_under_QEMU%2Fzh_tw.mw
+++ b/Openmoko_under_QEMU%2Fzh_tw.mw
@@ -1,6 +1,6 @@
-[http://en.wikipedia.org/wiki/Qemu QEMU] 可以以三種模式在[[Openmoko]]上執行。依照你想要使用模擬器的目地，你應該決定目標平台。
+[http://en.wikipedia.org/wiki/Qemu QEMU] 可以以三種模式在Openmoko上執行。依照你想要使用模擬器的目地，你應該決定目標平台。
 
-*''PC'' - Openmoko可以建立在一般i386的硬體平台上，32- 或 64-bit，若想要暸解程式執行的狀況，這可能是讓Openmoko執行的最快方法。使用這種方法，QEMU只能用來隔離你所使用的一般系統上的[[Openmoko]] 安裝，或者，如果你並不是使用UNIX 系統，QEMU提供非導引式的方法，取得Linux。你可以在[[FAQ]]及[[Getting Openmoko working on host with Xoo|這裡]]找到更多的資訊。
+*''PC'' - Openmoko可以建立在一般i386的硬體平台上，32- 或 64-bit，若想要暸解程式執行的狀況，這可能是讓Openmoko執行的最快方法。使用這種方法，QEMU只能用來隔離你所使用的一般系統上的Openmoko 安裝，或者，如果你並不是使用UNIX 系統，QEMU提供非導引式的方法，取得Linux。你可以在[[FAQ]]及[[Getting Openmoko working on host with Xoo|這裡]]找到更多的資訊。
 
 *''Integrator/CP'' - 這是著名的QEMU 預設的ARM-based 裝置。它的目地裝置以 MACHINE="qemuarm" 定義，並且它可以執行原始的Openmoko rootfs 映像檔，雖然除了CPU的核心外，它沒有模擬任何[[:Category:Neo1973 Hardware | Neo1973 硬體裝置]] 。
 
