Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Other_OSes.mw
+++ b/Other_OSes.mw
@@ -1,4 +1,4 @@
-There are two areas in which other OSes can take a part in [[Openmoko]].
+There are two areas in which other OSes can take a part in Openmoko.
 First, not everybody will use Linux on the computer to access their phones (including download and develop software); we call this the ''host OS''.
 Second, some people may wish to run some other software than Openmoko on their devices, and especially other Linux distributions should be viable.
 
