Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Problems_of_typical_"closed"_phones.mw
+++ b/Problems_of_typical_"closed"_phones.mw
@@ -1,6 +1,6 @@
 The majority of cell phone owners purchase their phones from a wireless carrier. These carrier provided phones are often modified in such a way that carriers can exercise maximum control over certain built-in features. As a result, carrier provided phones may have some killer features completely removed or in the best case scenario, disabled till the user pays a fee to the carrier. This is known as "crippling" a phone.
 
-Fortunately, phone buyers have other options. Crippled phones can be avoided by purchasing a factory unlocked phone such as the [[Openmoko]] phone. Factory unlocked phones are purchased directly from the manufacturers (or retailers) with no modifications or restrictions.
+Fortunately, phone buyers have other options. Crippled phones can be avoided by purchasing a factory unlocked phone such as the Openmoko phone. Factory unlocked phones are purchased directly from the manufacturers (or retailers) with no modifications or restrictions.
 
 ''This page contains examples of "crippled" features on carrier provided phones listed by members of the Openmoko community.''
 
