Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/SettingsGUI.mw
+++ b/SettingsGUI.mw
@@ -8,7 +8,7 @@
 
 
 == Overview ==
-Until [[Openmoko]] releases an official GUI-Tool to change settings, SettingsGUI allows you to set various settings of the [[gta01]].
+Until Openmoko releases an official GUI-Tool to change settings, SettingsGUI allows you to set various settings of the [[gta01]].
 
 This program is written in [[Python]] using pygtk. It can be used only if those are present in your environment (see [[SettingsGUI#Environment]]).
 
