Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Openmoko_supported_devices%2Fes.mw
+++ b/Openmoko_supported_devices%2Fes.mw
@@ -1,4 +1,4 @@
-[[Openmoko]] significa que puede ser usado en varios dispositivos.
+Openmoko significa que puede ser usado en varios dispositivos.
 Las siguientes plataformas están soportadas en menor o mayor grado.
 
 * [[Neo1973/es|Neo 1973]] y [[Neo FreeRunner/es|Neo FreeRunner]] son las plataformas de referencia.
