--- a/System_Developer.mw
+++ b/System_Developer.mw
@@ -20,7 +20,7 @@ Some software runs on the PC connected to the smartphone.
 * Userspace
 ** [[gsmd]] - The gsm daemon talking to the GSM Modem
 ** [[gpsd]] - The gps daemon talking to the GPS Unit
-** [[Openmoko]] distribution
+** Openmoko distribution
 *** [[Openmoko2007]] is the first release
 *** [[Userspace root image]]
 
