--- a/System_Developer%2Fes.mw
+++ b/System_Developer%2Fes.mw
@@ -18,7 +18,7 @@ Mucho del software corre con el PC conectado al smartphone.
 ** [[Kernel]] - El núcleo Linux para el Neo1973.
 * Userspace
 ** [[gsmd]] - El demonio para el modem GSM.
-** [[Openmoko]] la distribución
+** Openmoko la distribución
 *** [[Openmoko2007]] su primera liberación
 *** [[Userspace root image]] la imagen en espacio de root
 {{Languages|System_Developer}}
