Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/System_Developer%2Fru.mw
+++ b/System_Developer%2Fru.mw
@@ -19,7 +19,7 @@
 * Пользовательский уровень
 ** [[gsmd]] - демон для работы с GSM-модемом
 ** [[gpsd]] - демоня для работы с GPS приемником
-** [[Openmoko]] дистрибутив
+** Openmoko дистрибутив
 *** [[Openmoko2007]] первый релиз
 *** [[Userspace root image]]
 {{Languages|System_Developer}}
