--- a/System_Developer%2Fzh_tw.mw
+++ b/System_Developer%2Fzh_tw.mw
@@ -16,7 +16,7 @@
 * 用戶空間
 ** [[gsmd]] - gsm 背景程式(daemon) ，負責與GSM 數據機進行溝通
 ** [[gpsd]] - gps 背景程式(daemon)，負責與GPS單元溝通。
-** [[Openmoko]] 發佈版
+** Openmoko 發佈版
 *** [[Openmoko2007]] 首先釋出
 *** [[Userspace root image]]
 
