Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/USB.mw
+++ b/USB.mw
@@ -1,6 +1,6 @@
 USB is the Universal Serial Bus, the standard wired connection between computers and accessories. 
 
-In [[Openmoko]] and the [[Neo1973]], the following USB techniques are working, or are currently being implemented:
+In Openmoko and the [[Neo1973]], the following USB techniques are working, or are currently being implemented:
 
 * [[USB Product IDs]]
 * [[USB DFU]] firmware uploads during [[u-boot]]
