Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Using_QEMU_with_MokoMakefile.mw
+++ b/Using_QEMU_with_MokoMakefile.mw
@@ -2,7 +2,7 @@
 
 For this, it's not required to download and run a complete Openmoko build (which takes several hours to even days and needs lots of disk space and RAM), because if you only need to test pre-compiled images, it is enough to build qemu-neo1973 and to set it up to run these images. This is what this article deals with and to describe how MokoMakefile makes this easy.
 
-Note: The [[Talk:MokoMakefile|talk page of MokoMakefile]] may also contain some valuable hints regarding compiling and using QEMU for [[Openmoko]], including distribution specific issues and workarounds.
+Note: The [[Talk:MokoMakefile|talk page of MokoMakefile]] may also contain some valuable hints regarding compiling and using QEMU for Openmoko, including distribution specific issues and workarounds.
 
 == Build requirements ==
 *gcc 3.4 or 3.3: You need gcc-3.x for building qemu. If you have no precompiled gcc-3.x packages, you need to compile it. [http://en.opensuse.org/Qemu_with_kqemu_kernel_module_support#GCC-3.3.6]
