Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1,8 +1,8 @@
-This article is a place to collect various thoughts about the future of the [[Openmoko]] software platform.  Most wish list ideas have been linked from this page, but you may also wish to check all pages [[:Category:Ideas|that have a category of 'Ideas']].
+This article is a place to collect various thoughts about the future of the Openmoko software platform.  Most wish list ideas have been linked from this page, but you may also wish to check all pages [[:Category:Ideas|that have a category of 'Ideas']].
 
 == Development ==
 === Painless SDK installation & Setup ===
-Our goal should be a completely painless setup for somebody wanting to develop using [[Openmoko]]
+Our goal should be a completely painless setup for somebody wanting to develop using Openmoko
 
 * one command for installation ("apt-get install openmoko" as in [http://blog.leggewie.org/?p=39 apt-get'able Openembedded])
 * one command to start Xnest (openmoko-xephyr?)
