Replacing '\[\[Openmoko\]\]' with 'Openmoko'

--- a/Wishlist_-_Hardware_-_Novel_Devices.mw
+++ b/Wishlist_-_Hardware_-_Novel_Devices.mw
@@ -1,4 +1,4 @@
-This page details hardware some would like in future [[Openmoko]] devices that are very different from the [[Neo1973]]. DVD/media players, cameras, ...
+This page details hardware some would like in future Openmoko devices that are very different from the [[Neo1973]]. DVD/media players, cameras, ...
 
 === Hard Drive ===
 Providing a hard drive, will allow storing music, movies, etc. Add USB storage device capability to use the device as an external hard drive.
